--- a/packages/rettangoli-vt/src/cli/templates/default.html
+++ b/packages/rettangoli-vt/src/cli/templates/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/theme.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yuusoft-org/rettangoli@main/apps/rettangoli.dev/static/public/base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yuusoft-org/rettangoli@main/apps/rettangoli.dev/static/public/theme-rtgl-slate.css">
     <script>
       window.rtglIcons = {
         text: `<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M4 12H20M4 8H20M4 16H12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>`,
@@ -38,7 +39,8 @@
         `,
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc2/dist/rettangoli-iife-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/rettangoli-iife-ui.min.js"></script>
     <script src="/public/main.js"></script>
   </head>
   <body class="dark">
