--- a/packages/rettangoli-vt/src/cli/templates/index.html
+++ b/packages/rettangoli-vt/src/cli/templates/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/public/theme.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yuusoft-org/rettangoli@main/apps/rettangoli.dev/static/public/base.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yuusoft-org/rettangoli@main/apps/rettangoli.dev/static/public/theme-rtgl-slate.css">
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       if (location.hash) {
@@ -15,7 +16,8 @@
       }
     });
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc2/dist/rettangoli-iife-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/rettangoli-iife-ui.min.js"></script>
 
   <style>
     pre {
