--- a/packages/rettangoli-vt/src/cli/templates/report.html
+++ b/packages/rettangoli-vt/src/cli/templates/report.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/public/theme.css">
-  <script src="https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc2/dist/rettangoli-iife-ui.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yuusoft-org/rettangoli@main/apps/rettangoli.dev/static/public/base.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yuusoft-org/rettangoli@main/apps/rettangoli.dev/static/public/theme-rtgl-slate.css">
+  <script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/rettangoli-iife-ui.min.js"></script>
   <style>
     code {
       white-space: pre-wrap;
