fix(ui): stabilize vt dialog snapshots and refresh baselines

--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-6.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-6.html
@@ -1,5 +1,10 @@
 ---
 title: "With path on label and image"
+skipInitialScreenshot: true
+steps:
+  - action: wait
+    ms: 300
+  - action: screenshot
 ---
 <rtgl-view g="lg" h="100vh" w="f" wrap>
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
