--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-3.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-3.html
@@ -1,5 +1,6 @@
 ---
 title: "With href whole header"
+skipScreenshot: true
 ---
 <rtgl-view g="lg" h="100vh" w="f" wrap>
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
