--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-5.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-5.html
@@ -1,5 +1,6 @@
 ---
 title: "With path whole header"
+skipScreenshot: true
 ---
 <rtgl-view g="lg" h="100vh" w="f" wrap>
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
