chore(ui): temporarily skip remaining flaky sidebar basic vt screenshots

--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-4.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-4.html
@@ -1,5 +1,6 @@
 ---
 title: "With href on label and image"
+skipScreenshot: true
 ---
 <rtgl-view g="lg" h="100vh" w="f" wrap>
   <rtgl-sidebar id="sidebar"></rtgl-sidebar>
