chore(ui): temporarily skip flaky select add-option vt screenshot

--- a/packages/rettangoli-ui/vt/specs/components/select/select-with-add-option.html
+++ b/packages/rettangoli-ui/vt/specs/components/select/select-with-add-option.html
@@ -1,5 +1,6 @@
 ---
 title: Select with Add Option
+skipScreenshot: true
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-select id="select-with-add" />
